# CV-BoilerPlate

./: README.md  pyproject.toml
dataset/: data.yaml
src/: classification.py  main.py  object_detection.py
src/Inference/: yolov8_inference.py
src/api/: app.py
src/models/: resnet_model.py  simple_cnn.py  yolov8_model.py
src/preprocessing/: image_augmentation.py  image_preprocessing.py
src/utils/: export.py  helper.py
tests/: test_fastapi.py  test_preprocessing.py
